--- a/source/_posts/十大经典排序算法.md
+++ b/source/_posts/十大经典排序算法.md
@@ -132,6 +132,33 @@ public void quickSort(int a[], int first, int last){
 2.将堆顶R[1]与最后一个元素R[n]交换，此时得到新的无序区（R1，R2，，，Rn-1）和新的有序区Rn，且满足R[1,2,,,n-1]<=R[n].
 3.由于交换后新的堆顶R[1]可能违反堆的性质，因此需要对当前无序区(R1,R2,……Rn-1)调整为新堆，然后再次将R[1]与无序区最后一个元素交换，得到新的无序区(R1,R2….Rn-2)和新的有序区(Rn-1,Rn)。不断重复此过程直到有序区的元素个数为n-1，则整个排序过程完成。
 ```java
-
+    public void heapSort(int a[]){
+        //1.构建大顶堆
+        for(int i= a.length/2-1; i>=0; i--){
+            adjustHeap(a, i, a.length);
+        }
+        //2.调整堆结构+交换堆顶元素与末尾元素
+        for(int j=a.length-1;j>0;j--){
+            int temp = a[0];
+            a[0] = a[j];
+            a[j] = temp;
+            adjustHeap(a,0,j);
+        }
+    }
+    private void adjustHeap(int arr[], int i, int length){
+        int temp = arr[i];
+        for(int k=2*i+1;k<length;k=2*k+1){ //从i结点的左子结点开始，也就是2i+1处开始
+            if(k+1<length && arr[k] < arr[k+1]){ //如果左子结点小于右子结点，k指向右子结点
+                k++;
+            }
+            if(arr[k] > temp){//如果子节点大于父节点，将子节点值赋给父节点（不用进行交换）
+                arr[i] = arr[k];
+                i = k;
+            }else{
+                break;
+            }
+        }
+        arr[i] = temp;
+    }
 ```
 
