--- a/source/_posts/十大经典排序算法.md
+++ b/source/_posts/十大经典排序算法.md
@@ -69,7 +69,7 @@ tags: 算法
 **代码：**
 ```java
     public void insertSort(int a[]){
-        for (int i = 1; i < a.length; i++) {
+        /*for (int i = 1; i < a.length; i++) {
             if (a[i]<a[i-1]){
                 int j = i-1;
                 int temp = a[i];
@@ -89,6 +89,20 @@ tags: 算法
                     flag = false;
                 }
             }
+        }*/
+        
+        if(a.length <=1){
+            return;
+        }
+        int j = 0, temp = 0;
+        for(int i=1; i<a.length; i++){
+            j = i-1;
+            temp = a[i];
+            while(j >=0 && temp < a[j]){
+                a[j+1] = a[j];
+                j--;
+            }
+            a[j+1] = temp;
         }
     }
 ```
