perfect the post

--- a/source/_posts/十大经典排序算法.md
+++ b/source/_posts/十大经典排序算法.md
@@ -5,7 +5,7 @@ tags: 算法
 ---
 
 # 十大经典排序算法
-![pic](./十大经典排序算法/十大经典排序算法.png)
+![pic](./十大经典排序算法/经典排序算法.png)
 
 ## 冒泡算法
 1.比较相邻的元素，如果第一个比第二大，就交换他们两个。
@@ -125,12 +125,56 @@ public void quickSort(int a[], int first, int last){
     }
 ```
 
+## 归并排序
+归并排序 是建立在归并操作上的一种有效的排序算法。该算法是采用分治法（Divide and Conquer）的一个非常典型的应用。归并排序是一种稳定的排序方法。将已有序的子序列合并，得到完全有序的序列；即先使每个子序列有序，再使子序列段间有序。若将两个有序表合并成一个有序表，称为2-路归并。
+
+1.把长度为n的输入序列分成两个长度为n/2的子序列
+2.对这两个子序列分别采用归并排序
+3.将两个排序好的子序列合并成一个最终的排序序列
+
+**代码：**
+```java
+public void mergeSort(int[] a, int l, int r, int[] temp){
+    if(l < r){
+        int mid = (l + r) / 2
+        mergeSort(a, l, mid), temp;
+        mergeSort(a, mid + 1, r, temp);
+        mergeArray(a, l, mid, r, temp);
+    }
+}
+private void mergeArray(int[] a, int l, int mid, int r, int[] temp){
+    int i=l , j=mid+1;
+    int m=mid, n=r;
+    int k = 0;
+    while(i <= m && j <= n){
+        if(a[i] < a[j]){
+            temp[k++] = a[i++];
+        }else{
+            temp[k++] = a[j++];
+        }
+    }
+    while(i <= m){
+        temp[k++] = a[i++];
+    }
+    while(i <= n){
+        temp[k++] = a[j++];
+    }
+    for(i = 0; i < k; i++){
+        a[l + i] = temp[i];
+    }
+}
+
+```
+
+
 ## 堆排序
 堆排序（Heapsort）是指利用堆这种数据结构所设计的一种排序算法。堆积是一个近似完全二叉树的结构，并同时满足堆积的性质：即子节点的键值或索引总是小于（或者大于）它的父节点。
 
 1.将初始待排序关键字序列（R1，R2，，，Rn）构建成大顶堆，此堆为初始的无序区。
 2.将堆顶R[1]与最后一个元素R[n]交换，此时得到新的无序区（R1，R2，，，Rn-1）和新的有序区Rn，且满足R[1,2,,,n-1]<=R[n].
 3.由于交换后新的堆顶R[1]可能违反堆的性质，因此需要对当前无序区(R1,R2,……Rn-1)调整为新堆，然后再次将R[1]与无序区最后一个元素交换，得到新的无序区(R1,R2….Rn-2)和新的有序区(Rn-1,Rn)。不断重复此过程直到有序区的元素个数为n-1，则整个排序过程完成。
+
+**代码：**
 ```java
     public void heapSort(int a[]){
         //1.构建大顶堆
@@ -162,3 +206,43 @@ public void quickSort(int a[], int first, int last){
     }
 ```
 
+## 桶排序
+假设输入数据服从均匀分布，将数据分到有限数量的桶里，每个桶再分别排序（有可能再使用别的排序算法或是以递归方式继续使用桶排序进行排
+
+1.人为设置一个BucketSize，作为每个桶所能放置多少个不同数值
+2.遍历输入数据，并且把数据一个一个放到对应的桶里去
+3.对每个不是空的桶进行排序，可以使用其它排序方法，也可以递归使用桶排序
+4.从不是空的桶里把排好序的数据拼接起来
+
+**代码：**
+```java
+public void bucketSort(int[] a){
+    int max = Integer.MIN_VALUE;
+    int min = Integer.MAX_VALUE;
+    for(int i=0; i<a.length; i++){
+        max = Math.max(max, a[i]);
+        min = Math.min(min, a[i]);
+    }
+
+    int bucketNum = (max-min)/a.length + 1;
+    ArrayList<ArrayList<Integer>> buckets = new ArrayList<>(bucketNum);
+    for(int i=0; i<bucketNum; i++){
+        buckets.add(new ArrayList<Integer>());
+    }
+
+    for(int i=0; i<a.length; i++){
+        int num = (a[i] - min)/a.length;
+        buckets.get(num).add[a[i]];
+    }
+    for(int i=0; i<bucketNum; i++){
+        Collections.sort(buckets.get(i));
+    }
+
+    int index = 0;
+    for(int i=0; i<buckets.size(); i++){
+        for(int j=0; j<buckets.get(i).size(); j++){
+            a[index++] = buckets.get(i).get(j);
+        }
+    }
+}
+```
